changes to getstarted based on feedback